--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,10 @@ addons:
     packages:
       - git
 
+after_success:
+  - ./node_modules/.bin/istanbul cover -x "**/spec/**" ./node_modules/.bin/_mocha --report lcovonly -- $(find spec -name '*-spec.js') -R spec --require spec/helper.js
+  - cat ./coverage/lcov.info | node_modules/.bin/coveralls
+
 notifications:
   slack:
     rooms:
